// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry/models/deploy-model - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Unified Azure OpenAI model deployment skill with intelligent intent-based routing. Handles quick preset deployments, fully customized deployments (version/SKU/capacity/RAI policy), and capacity discovery across regions and projects.
USE FOR: deploy model, deploy gpt, create deployment, model deployment, deploy openai model, set up model, provision model, find capacity, check model availability, where can I deploy, best region for model, capacity analysis.
DO NOT USE FOR: listing existing deployments (use foundry_models_deployments_list MCP tool), deleting deployments, agent creation (use agent/create), project creation (use project/create).
",
  "extractedKeywords": [
    "across",
    "agent",
    "analysis",
    "availability",
    "azure",
    "best",
    "capacity",
    "check",
    "cli",
    "create",
    "creation",
    "customized",
    "deleting",
    "deploy",
    "deployment",
    "deployments",
    "discovery",
    "existing",
    "find",
    "foundry_models_deployments_list",
    "fully",
    "handles",
    "intelligent",
    "intent-based",
    "listing",
    "model",
    "openai",
    "policy",
    "preset",
    "project",
    "projects",
    "provision",
    "quick",
    "region",
    "regions",
    "routing",
    "skill",
    "tool",
    "unified",
    "version",
    "where",
    "with",
  ],
  "name": "deploy-model",
}
`;

exports[`microsoft-foundry/models/deploy-model - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "agent",
  "analysis",
  "availability",
  "azure",
  "best",
  "capacity",
  "check",
  "cli",
  "create",
  "creation",
  "customized",
  "deleting",
  "deploy",
  "deployment",
  "deployments",
  "discovery",
  "existing",
  "find",
  "foundry_models_deployments_list",
  "fully",
  "handles",
  "intelligent",
  "intent-based",
  "listing",
  "model",
  "openai",
  "policy",
  "preset",
  "project",
  "projects",
  "provision",
  "quick",
  "region",
  "regions",
  "routing",
  "skill",
  "tool",
  "unified",
  "version",
  "where",
  "with",
]
`;
